# stochastic-hybrid-games

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Docker-compose.yml  Dockerfile  Log.txt  Makefile  README.md  commands.sh  docker-compose.yml  environment.yml  jsonTestIbex.json  main.py  patterns_test.json  plot_controllers.py  prueba.py  requirements.in  requirements.txt  run.sh  run_experiment.py  setup.sh  setup.txt
code/: .gitignore  1.xml  1c.xml  2.xml  2c.xml  4_rooms  4_rooms.cpp  CMakeLists.txt  Log.txt  Processing.h  ProcessingUtils.h  README.md  Simulation.py  animation.py  ans.py  anspretest.xml  anstest.xml  call.py  callStratego.cpp  cat.xml  check.txt  data_for_uppaal.txt  main  main.cpp  mainStratego.cpp  pattern_generator.cpp  patterns.py  patterns2.py  patterns3.py  patterns4.py  porsiaca.txt  porsiaca2.txt  problems.txt  query.q  random.xml  randomc.xml  read.h  result_4_rooms.txt  safeTools.h  solarWaterHeating.h  (+7 more)
code/.ipynb_checkpoints/: multi-checkpoint.py  time-series-analysis-ARIMA-checkpoint.ipynb
code/1 swh/1.1 works!/: Solargis_min15_Almeria_Spain.csv  patterns1.py  tmp1.py
code/1 swh/1.2 PlotComparison/: 1.xml  1c.xml
code/1 swh/1.3 Forecast/: 1c.q  1c.xml  query.q  tmp1.py  valve.csv
code/1 swh/1.4 Second Region/: 1.xml  1c.xml  multy.py  tmp1.py
code/1 swh/1.5 uppaal/: .~lock.tema.odt#  query.q  tema.odt  test.xml
code/1/1.1 works!/: 1c.xml
code/1/1.2 PlotComparison/: tmp1.py
code/1/1.3 Forecast/: tmp1.py
code/2/: R2.py  R2.xml  R2c.xml  tmpR2.py
code/2 bouncing ball/: BouncingBall03Stratego.xml  tmp.py
code/Simulation/: LConfig.h  LUtils.h  main.cpp  main.py  mainfactory.py  test.cpp  utils.py
code/ans/: CMakeLists.txt  animation.py  ans.py  international-airline-passengers.csv  main.cpp  multi.py  patterns5.py  test.ipynb  time-series-analysis-ARIMA.ipynb  tmp2.py  tmp3.py
code/lib/dynibex/: ibex.pc  ibex_Setting.h
code/lib/dynibex/function/: ibex_Function.cpp  ibex_univ_taylor_aff.cpp
code/lib/dynibex/integrate/: ibex_edfrechet.h  ibex_edtree_frechet.cpp  ibex_logger.cpp  ibex_logger.h  ibex_rootedtree.h  ibex_simulation.h  ibex_solution_GL4.h  ibex_solution_LA3.h  ibex_solution_LC3.h  ibex_solution_RADAU3.h  ibex_solution_RADAU5.h  ibex_solution_RK4.h  ibex_solution_TAYLOR4.h  ibex_solution_iMIDPOINT.h  ibex_solution_kutta3.h  ibex_vertex_wdag_aff.cpp  ibex_vertex_wdag_aff.h
code/lib/dynibex/parser/: ._ibex_SyntaxError.cpp
code/lib/dynibex/symbolic/: README.txt
code/lib/multiprocessing/: download.sh
code/pdf/: Latex.txt  query.aux  query.fdb_latexmk  query.fls  query.tex
code/python/SolarEnergy/: Solargis_min15_Almeria_Spain.csv  description_Data.txt  resources.txt
code/python/test/: data_swh.txt  factorymain.py  getSolarIncidentAngle.py  loadIrradiance.py  main.py
code/python/test2/: Untitled.ipynb  com.cpp  etc.py  etc.txt  happy.ipynb  main_2.py  supportFIles.txt  test.ipynb  valve.csv  volume.py
code/python/test2/.ipynb_checkpoints/: happy-checkpoint.ipynb  main_2-checkpoint.py  test-checkpoint.ipynb
code/python/test2/uppaalStratego/: callStratego  callStratego.cpp  controller0.xml  precontroller0.xml  query.q
code/simulation/: CMakeLists.txt  GraphicsUtils.h  LCommon.h  LSwitchedSystem.h  LUtils.h  ProcessingUtils.h  test.cpp
code/simulation/SolarEnergy/: Solargis_min15_Almeria_Spain.csv  Untitled 1.odt  meteotest_normal_year_87962.csv
code/simulation/comment/: main.cpp
code/simulation/python/: calculus.py  main.py  sunposition.py  utils.py
code/sources/patterns/: CMakeLists.txt  README.md  pattern_generator.cpp
code/sthocastic_hybrid_game/: util.py
code/sthocastic_hybrid_game/model/: main.py
code/sthocastic_hybrid_game/tasks/: run_shg_uppaal.sh
code/strategoSamples/: fh11_R1_5_pareto_patterns.xml
code/test/: CMakeLists.txt  test_json_ofstream.cpp
code/testing/: CMakeLists.txt  test.cpp
doc/: README.md  definitions.txt  equaciones.txt
doc/tost/: CMakeLists.txt  test_ibex_json.cpp
mpc/: main.py  test_SWH.py  test_UPPAAL.py
notebooks/: sim.ipynb
paper/: conference_041818.aux  conference_041818.bbl  conference_041818.blg  conference_041818.fdb_latexmk  conference_041818.fls  conference_041818.tex  macro.sty  mybib.bib
paperdoc/: conference_041818.aux  conference_041818.fdb_latexmk  conference_041818.fls  conference_041818.tex
patterns/: 4_rooms  4_rooms.cpp  CMakeLists.txt  Dockerfile  Lcatch.hpp  Ldecompose.h  Lread_json.h  Lread_write_json.h  Lswitched_system.h  Lutils.h  Tdynibex_test.cpp  main.cpp  result_4_rooms.txt
requirements/: dev.in  dev.txt  prod.in  prod.txt
sources/patterns/: CMakeLists.txt  common.h  config.h  decompose.h  findPattern.h  foo.cpp  foo.h  jsonParseUppaal.py  jsonToUppal.txt  jsonUtils.h  main.cpp  model.h  parameters.json  pattern.json  pattern_generator.cpp  patterns_test.json
sources/patterns/data/: ans.txt  parameters.json  pattern_generator  pattern_generator.cpp  patterns3.txt
sources/patterns/src/: CMakeLists.txt  ansMain.cpp  common.h  config.h  decompose.h  json_to_uppaal.py  main.cpp  model.h  read_json.h  read_write_json.h  utils.h
sources/patterns/test/: CMakeLists.txt  car_test.cpp  config_test.cpp  model_test.cpp
sources/test/: CMakeLists.txt  model_test.cpp  pattern_generator_test.cpp
test/: CMakeLists.txt  data.json  foo.xml  test_ibex_json.cpp  test_json_ifstream.cpp  test_json_ofstream.cpp
ucsp-mcs-thesis-doc/: abbreviations.aux  abstract_en.tex  abstract_es.tex  ch_background.tex  ch_conclusions.tex  ch_igeomap.tex  ch_intro.tex  ch_relatedWorks.tex  tesis.sty  thesis-doc.aux  thesis-doc.bbl  thesis-doc.bib  thesis-doc.blg  thesis-doc.out  thesis-doc.tex  thesis-doc.toc
ucsp-mcs-thesis-english-2018/: Includes.tex  Untitled.ipynb  abstract_en.lyx  abstract_en.tex  abstract_es.lyx  applications.tex  ch_background.lyx  ch_background.tex  ch_conclusions.lyx  ch_conclusions.tex  ch_intro.lyx  ch_intro.tex  ch_relatedWorks.lyx  ch_relatedWorks.tex  dataset.tex  tesis.sty  thesis-doc.aux  (+8 more)
uppaal/config/: CMakeLists.txt  config_wrapper_swh.cpp  dynamic_json.json  static_json.json
(+287 files in other folders)
